Fix overflow

--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -193,38 +193,38 @@ h5 {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  overflow: hidden;
 
   .container {
    position: relative;
 
+    .home-hero-punchline{
+      position:relative;
 
-  .home-hero-punchline{
-    position:relative;
+      color: #fff;
+      font-weight: 100;
 
-    color: #fff;
-    font-weight: 100;
+      margin:0;
+      font-size:15px;
 
-    margin:0;
-    font-size:15px;
-
-    top:352px;
-    left:700px;
-
-
-    letter-spacing: 4px;
-    line-height: 46px;
+      top:352px;
+      left:700px;
 
 
-    @media (max-width: @screen-xs-max) {
-      top: 30px;
-      left:15px;
-      right:15px;
-      line-height: 30px;
+      letter-spacing: 4px;
+      line-height: 46px;
 
-      font-size:30px;
+
+      @media (max-width: @screen-xs-max) {
+        top: 30px;
+        left:15px;
+        right:15px;
+        line-height: 30px;
+
+        font-size:30px;
+      }
     }
   }
-}
 }
 
 
